Fixes del Unit Testing

--- a/partials/forgetPassword.html
+++ b/partials/forgetPassword.html
@@ -15,5 +15,5 @@
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-default" ng-click="cancel()">Cancelar</button>
-  <button type="submit" ng-click="mailForgetPassword()" class="btn btn-primary" ng-disabled="!mail">Enviar</button>
+  <button type="submit" ng-click="mailForgetPassword(mail)" class="btn btn-primary" ng-disabled="!mail">Enviar</button>
 </div>
